--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
               euismod auctor.
             </p>
             <div class="profile-icons">
+              <a href="https://github.com/PierreGronnier"
+                ><i class="fab fa-github"></i
+              ></a>
               <a href="#"><i class="fab fa-x"></i></a>
               <a href="#"><i class="fab fa-linkedin-in"></i></a>
-              <a href="#"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
