--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
               <a href="https://github.com/PierreGronnier"
                 ><i class="fab fa-github"></i
               ></a>
-              <a href="#"><i class="fab fa-x"></i></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://x.com"><i class="fab fa-x"></i></a>
+              <a href="https://www.linkedin.com"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
             </div>
           </div>
         </div>
