complete the my work part, including responsive and a animation while hovering a card

--- a/index.html
+++ b/index.html
@@ -43,5 +43,235 @@
         </div>
       </div>
     </header>
+    <section class="work-section">
+      <h1>My Work</h1>
+      <div class="grid-container">
+        <article>
+          <img src="/imgs/weather-app.PNG" alt="Weather app" />
+          <div class="text">
+            <div class="project-header">
+              <h3 class="title">Weather App</h3>
+              <div class="project-icons">
+                <a href="https://github.com/PierreGronnier/odin-weather-app">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="https://pierregronnier.github.io/odin-weather-app/">
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+              euismod tortor et urna fermentum rutrum a nec lectus. Etiam et
+              erat nec tortor egestas suscipit in quis libero.
+            </p>
+          </div>
+        </article>
+
+        <article>
+          <img src="/imgs/todo-list.PNG" alt="Todo list" />
+          <div class="text">
+            <div class="project-header">
+              <h3 class="title">Todo List</h3>
+              <div class="project-icons">
+                <a
+                  href="https://github.com/PierreGronnier/odin-TodoList/tree/main"
+                >
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="https://pierregronnier.github.io/odin-TodoList/">
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+              euismod tortor et urna fermentum rutrum a nec lectus. Etiam et
+              erat nec tortor egestas suscipit in quis libero.
+            </p>
+          </div>
+        </article>
+
+        <article>
+          <img src="/imgs/battleship-game.PNG" alt="Battleship game" />
+          <div class="text">
+            <div class="project-header">
+              <h3 class="title">Battleship Game</h3>
+              <div class="project-icons">
+                <a href="https://github.com/PierreGronnier/odin-battleship">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="https://pierregronnier.github.io/odin-battleship/">
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+              euismod tortor et urna fermentum rutrum a nec lectus. Etiam et
+              erat nec tortor egestas suscipit in quis libero.
+            </p>
+          </div>
+        </article>
+
+        <article>
+          <img src="/imgs/etch-a-sketch.PNG" alt="Etch-a-Sketch" />
+          <div class="text">
+            <div class="project-header">
+              <h3 class="title">Etch-a-Sketch</h3>
+              <div class="project-icons">
+                <a href="https://github.com/PierreGronnier/odin-etch-a-sketch">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="https://pierregronnier.github.io/odin-etch-a-sketch/">
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+              euismod tortor et urna fermentum rutrum a nec lectus. Etiam et
+              erat nec tortor egestas suscipit in quis libero.
+            </p>
+          </div>
+        </article>
+
+        <article>
+          <img src="/imgs/admin-dashboard.PNG" alt="Admin dashboard" />
+          <div class="text">
+            <div class="project-header">
+              <h3 class="title">Admin Dashboard</h3>
+              <div class="project-icons">
+                <a
+                  href="https://github.com/PierreGronnier/odin-admin-dashboard"
+                >
+                  <i class="fab fa-github"></i>
+                </a>
+                <a
+                  href="https://pierregronnier.github.io/odin-admin-dashboard/"
+                >
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+              euismod tortor et urna fermentum rutrum a nec lectus. Etiam et
+              erat nec tortor egestas suscipit in quis libero.
+            </p>
+          </div>
+        </article>
+
+        <article>
+          <img src="/imgs/restaurant.PNG" alt="Restaurant page" />
+          <div class="text">
+            <div class="project-header">
+              <h3 class="title">Restaurant page</h3>
+              <div class="project-icons">
+                <a href="https://github.com/PierreGronnier/odin-restaurant">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="https://pierregronnier.github.io/odin-restaurant/">
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+              euismod tortor et urna fermentum rutrum a nec lectus. Etiam et
+              erat nec tortor egestas suscipit in quis libero.
+            </p>
+          </div>
+        </article>
+
+        <article>
+          <img src="/imgs/calculator.PNG" alt="Calculator" />
+          <div class="text">
+            <div class="project-header">
+              <h3 class="title">Calculator</h3>
+              <div class="project-icons">
+                <a href="https://github.com/PierreGronnier/odin-calculator">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="https://pierregronnier.github.io/odin-calculator/">
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+              euismod tortor et urna fermentum rutrum a nec lectus. Etiam et
+              erat nec tortor egestas suscipit in quis libero.
+            </p>
+          </div>
+        </article>
+
+        <article>
+          <img src="/imgs/rock-paper-scissors.PNG" alt="Rock paper scissors" />
+          <div class="text">
+            <div class="project-header">
+              <h3 class="title">Rock Paper Scissors</h3>
+              <div class="project-icons">
+                <a href="https://github.com/PierreGronnier/rock-paper-scissors">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="https://pierregronnier.github.io/rock-paper-scissors/">
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+              euismod tortor et urna fermentum rutrum a nec lectus. Etiam et
+              erat nec tortor egestas suscipit in quis libero.
+            </p>
+          </div>
+        </article>
+
+        <article>
+          <img src="/imgs/library.PNG" alt="Library page" />
+          <div class="text">
+            <div class="project-header">
+              <h3 class="title">Library</h3>
+              <div class="project-icons">
+                <a href="https://github.com/PierreGronnier/odin-library">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="https://pierregronnier.github.io/odin-library/">
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+              euismod tortor et urna fermentum rutrum a nec lectus. Etiam et
+              erat nec tortor egestas suscipit in quis libero.
+            </p>
+          </div>
+        </article>
+
+        <article>
+          <img src="/imgs/tic-tac-toe.PNG" alt="Tic tac toe" />
+          <div class="text">
+            <div class="project-header">
+              <h3 class="title">Tic Tac Toe</h3>
+              <div class="project-icons">
+                <a href="https://github.com/PierreGronnier/odin-tic-tac-toe">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="https://pierregronnier.github.io/odin-tic-tac-toe/">
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+              euismod tortor et urna fermentum rutrum a nec lectus. Etiam et
+              erat nec tortor egestas suscipit in quis libero.
+            </p>
+          </div>
+        </article>
+      </div>
+    </section>
   </body>
 </html>
