add target blank to open all href link in another webpage and noopener and noreferrer for safety issue

--- a/index.html
+++ b/index.html
@@ -31,11 +31,17 @@
               euismod auctor.
             </p>
             <div class="profile-icons">
-              <a href="https://github.com/PierreGronnier"
+              <a
+                href="https://github.com/PierreGronnier"
+                target="_blank"
+                rel="noopener noreferrer"
                 ><i class="fab fa-github"></i
               ></a>
               <a href="https://x.com"><i class="fab fa-x"></i></a>
-              <a href="https://www.linkedin.com"
+              <a
+                href="https://www.linkedin.com"
+                target="_blank"
+                rel="noopener noreferrer"
                 ><i class="fab fa-linkedin-in"></i
               ></a>
             </div>
@@ -52,10 +58,18 @@
             <div class="project-header">
               <h3 class="title">Weather App</h3>
               <div class="project-icons">
-                <a href="https://github.com/PierreGronnier/odin-weather-app">
+                <a
+                  href="https://github.com/PierreGronnier/odin-weather-app"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="https://pierregronnier.github.io/odin-weather-app/">
+                <a
+                  href="https://pierregronnier.github.io/odin-weather-app/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fa-solid fa-arrow-up-right-from-square"></i>
                 </a>
               </div>
@@ -76,10 +90,16 @@
               <div class="project-icons">
                 <a
                   href="https://github.com/PierreGronnier/odin-TodoList/tree/main"
+                  target="_blank"
+                  rel="noopener noreferrer"
                 >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="https://pierregronnier.github.io/odin-TodoList/">
+                <a
+                  href="https://pierregronnier.github.io/odin-TodoList/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fa-solid fa-arrow-up-right-from-square"></i>
                 </a>
               </div>
@@ -98,10 +118,18 @@
             <div class="project-header">
               <h3 class="title">Battleship Game</h3>
               <div class="project-icons">
-                <a href="https://github.com/PierreGronnier/odin-battleship">
+                <a
+                  href="https://github.com/PierreGronnier/odin-battleship"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="https://pierregronnier.github.io/odin-battleship/">
+                <a
+                  href="https://pierregronnier.github.io/odin-battleship/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fa-solid fa-arrow-up-right-from-square"></i>
                 </a>
               </div>
@@ -120,10 +148,18 @@
             <div class="project-header">
               <h3 class="title">Etch-a-Sketch</h3>
               <div class="project-icons">
-                <a href="https://github.com/PierreGronnier/odin-etch-a-sketch">
+                <a
+                  href="https://github.com/PierreGronnier/odin-etch-a-sketch"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="https://pierregronnier.github.io/odin-etch-a-sketch/">
+                <a
+                  href="https://pierregronnier.github.io/odin-etch-a-sketch/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fa-solid fa-arrow-up-right-from-square"></i>
                 </a>
               </div>
@@ -144,11 +180,15 @@
               <div class="project-icons">
                 <a
                   href="https://github.com/PierreGronnier/odin-admin-dashboard"
+                  target="_blank"
+                  rel="noopener noreferrer"
                 >
                   <i class="fab fa-github"></i>
                 </a>
                 <a
                   href="https://pierregronnier.github.io/odin-admin-dashboard/"
+                  target="_blank"
+                  rel="noopener noreferrer"
                 >
                   <i class="fa-solid fa-arrow-up-right-from-square"></i>
                 </a>
@@ -168,10 +208,18 @@
             <div class="project-header">
               <h3 class="title">Restaurant page</h3>
               <div class="project-icons">
-                <a href="https://github.com/PierreGronnier/odin-restaurant">
+                <a
+                  href="https://github.com/PierreGronnier/odin-restaurant"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="https://pierregronnier.github.io/odin-restaurant/">
+                <a
+                  href="https://pierregronnier.github.io/odin-restaurant/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fa-solid fa-arrow-up-right-from-square"></i>
                 </a>
               </div>
@@ -190,10 +238,18 @@
             <div class="project-header">
               <h3 class="title">Calculator</h3>
               <div class="project-icons">
-                <a href="https://github.com/PierreGronnier/odin-calculator">
+                <a
+                  href="https://github.com/PierreGronnier/odin-calculator"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="https://pierregronnier.github.io/odin-calculator/">
+                <a
+                  href="https://pierregronnier.github.io/odin-calculator/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fa-solid fa-arrow-up-right-from-square"></i>
                 </a>
               </div>
@@ -212,10 +268,18 @@
             <div class="project-header">
               <h3 class="title">Rock Paper Scissors</h3>
               <div class="project-icons">
-                <a href="https://github.com/PierreGronnier/rock-paper-scissors">
+                <a
+                  href="https://github.com/PierreGronnier/rock-paper-scissors"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="https://pierregronnier.github.io/rock-paper-scissors/">
+                <a
+                  href="https://pierregronnier.github.io/rock-paper-scissors/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fa-solid fa-arrow-up-right-from-square"></i>
                 </a>
               </div>
@@ -234,10 +298,18 @@
             <div class="project-header">
               <h3 class="title">Library</h3>
               <div class="project-icons">
-                <a href="https://github.com/PierreGronnier/odin-library">
+                <a
+                  href="https://github.com/PierreGronnier/odin-library"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="https://pierregronnier.github.io/odin-library/">
+                <a
+                  href="https://pierregronnier.github.io/odin-library/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fa-solid fa-arrow-up-right-from-square"></i>
                 </a>
               </div>
@@ -256,10 +328,18 @@
             <div class="project-header">
               <h3 class="title">Tic Tac Toe</h3>
               <div class="project-icons">
-                <a href="https://github.com/PierreGronnier/odin-tic-tac-toe">
+                <a
+                  href="https://github.com/PierreGronnier/odin-tic-tac-toe"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="https://pierregronnier.github.io/odin-tic-tac-toe/">
+                <a
+                  href="https://pierregronnier.github.io/odin-tic-tac-toe/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <i class="fa-solid fa-arrow-up-right-from-square"></i>
                 </a>
               </div>
