add little more text in "about me"

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
               amet convallis. Morbi sit amet orci sit amet lorem porta
               ultricies. Nam ut interdum metus, non venenatis erat. Ut vitae sem
               id elit venenatis vehicula in eu augue. Vivamus tempor, felis non
-              euismod auctor.
+              euismod auctor. Etiam et erat nec tortor egestas suscipit in quis
+              libero.
             </p>
             <div class="profile-icons">
               <a
