complete the project with the footer and make some small change

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <div class="profile-container">
         <div class="profile-image">
-          <img src="imgs/profile-picture.jpg" alt="A goose" />
+          <img src="imgs/profile-picture.jpg" alt="Rocket Rackoon" />
           <div class="image-name">Pierre Gronnier</div>
         </div>
         <div class="profile-card">
@@ -38,7 +38,9 @@
                 rel="noopener noreferrer"
                 ><i class="fab fa-github"></i
               ></a>
-              <a href="https://x.com"><i class="fab fa-x"></i></a>
+              <a href="https://x.com" target="_blank" rel="noopener noreferrer"
+                ><i class="fab fa-x"></i
+              ></a>
               <a
                 href="https://www.linkedin.com"
                 target="_blank"
@@ -354,5 +356,38 @@
         </article>
       </div>
     </section>
+    <footer>
+      <div class="footer-info">
+        <h2>Contact me</h2>
+        <p class="contact-message">
+          Please get in touch if you think our work could be mutually
+          beneficial!
+        </p>
+        <div class="address">
+          <p>1234 Random Road</p>
+          <p>Random Town, California 12345</p>
+        </div>
+        <p><i class="fa-solid fa-phone"></i>555-555-5555</p>
+        <p><i class="fa-solid fa-envelope"></i>pierre.gronnier@gmail.com</p>
+        <div class="social-icons">
+          <a
+            href="https://github.com/PierreGronnier"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a href="https://x.com" target="_blank" rel="noopener noreferrer"
+            ><i class="fab fa-x"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-linkedin-in"></i
+          ></a>
+        </div>
+      </div>
+      <img src="imgs/footer.png" alt="Rocket Rackoon driving" />
+    </footer>
   </body>
 </html>
