change img path to try to solve problem

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         </article>
 
         <article>
-          <img src="/imgs/library.png" alt="Library page" />
+          <img src="imgs/library.png" alt="Library page" />
           <div class="text">
             <div class="project-header">
               <h3 class="title">Library</h3>
