--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h1>My Work</h1>
       <div class="grid-container">
         <article>
-          <img src="imgs/weather-app.PNG" alt="Weather app" />
+          <img src="imgs/weather-app.png" alt="Weather app" />
           <div class="text">
             <div class="project-header">
               <h3 class="title">Weather App</h3>
@@ -86,7 +86,7 @@
         </article>
 
         <article>
-          <img src="imgs/todo-list.PNG" alt="Todo list" />
+          <img src="imgs/todo-list.png" alt="Todo list" />
           <div class="text">
             <div class="project-header">
               <h3 class="title">Todo List</h3>
@@ -116,7 +116,7 @@
         </article>
 
         <article>
-          <img src="imgs/battleship-game.PNG" alt="Battleship game" />
+          <img src="imgs/battleship-game.png" alt="Battleship game" />
           <div class="text">
             <div class="project-header">
               <h3 class="title">Battleship Game</h3>
@@ -146,7 +146,7 @@
         </article>
 
         <article>
-          <img src="imgs/etch-a-sketch.PNG" alt="Etch-a-Sketch" />
+          <img src="imgs/etch-a-sketch.png" alt="Etch-a-Sketch" />
           <div class="text">
             <div class="project-header">
               <h3 class="title">Etch-a-Sketch</h3>
@@ -176,7 +176,7 @@
         </article>
 
         <article>
-          <img src="imgs/admin-dashboard.PNG" alt="Admin dashboard" />
+          <img src="imgs/admin-dashboard.png" alt="Admin dashboard" />
           <div class="text">
             <div class="project-header">
               <h3 class="title">Admin Dashboard</h3>
@@ -206,7 +206,7 @@
         </article>
 
         <article>
-          <img src="imgs/restaurant.PNG" alt="Restaurant page" />
+          <img src="imgs/restaurant.png" alt="Restaurant page" />
           <div class="text">
             <div class="project-header">
               <h3 class="title">Restaurant page</h3>
@@ -236,7 +236,7 @@
         </article>
 
         <article>
-          <img src="imgs/calculator.PNG" alt="Calculator" />
+          <img src="imgs/calculator.png" alt="Calculator" />
           <div class="text">
             <div class="project-header">
               <h3 class="title">Calculator</h3>
@@ -266,7 +266,7 @@
         </article>
 
         <article>
-          <img src="imgs/rock-paper-scissors.PNG" alt="Rock paper scissors" />
+          <img src="imgs/rock-paper-scissors.png" alt="Rock paper scissors" />
           <div class="text">
             <div class="project-header">
               <h3 class="title">Rock Paper Scissors</h3>
@@ -326,7 +326,7 @@
         </article>
 
         <article>
-          <img src="imgs/tic-tac-toe.PNG" alt="Tic tac toe" />
+          <img src="imgs/tic-tac-toe.png" alt="Tic tac toe" />
           <div class="text">
             <div class="project-header">
               <h3 class="title">Tic Tac Toe</h3>
